# ModernLogging

./: .gitignore  CMakeLists.txt  MyPreciousContainer.cpp  MyPreciousContainer.h  MyPreciousLogger.h  README.md  modernLog.cpp
